加入了APP图标，略微美化了一下界面，功能无变化。 App icon added, slightly spruced up the interface, no change in functionality.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:minHeight="0dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:theme="@style/BackGroundTheme">
 
     <Button
         android:id="@+id/getId3Button"
