--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,11 +1,21 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.获取ID3信息" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="android:navigationBarColor">#00000000</item>
+    <style name="Base.Theme.获取ID3信息" parent="Theme.Material3.DynamicColors.DayNight">
+        <item name="android:navigationBarColor">@android:color/system_accent1_900</item>
         <item name="android:windowLightNavigationBar">false</item>
-<!--        <item name="android:statusBarColor">#7CA884</item>-->
-<!--        <item name="android:backgroundTint">@color/backgroundNight</item>-->
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:statusBarColor">@android:color/system_neutral1_900</item>
+
+        <!-- <item name="android:statusBarColor">#7CA884</item>-->
+        <!-- <item name="android:backgroundTint">@color/backgroundNight</item>-->
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+
     </style>
+
+    <style name="BackGroundTheme" parent="Theme.Material3.DynamicColors.DayNight">
+        <item name="android:background">@android:color/system_accent1_900</item>
+    </style>
+
+
 </resources>
