--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,12 +1,16 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.获取ID3信息" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="android:navigationBarColor">#00000000</item>
+    <style name="Base.Theme.获取ID3信息" parent="Theme.Material3.DynamicColors.DayNight">
+        <item name="android:navigationBarColor">@android:color/system_accent1_50</item>
         <item name="android:windowLightNavigationBar">true</item>
-<!--        <item name="android:statusBarColor">#7CA884</item>-->
-<!--        <item name="android:backgroundTint">@color/backgroundDay</item>-->
-        <!-- Customize your light theme here. -->
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:statusBarColor">@android:color/system_neutral1_100</item>
     </style>
+
+    <style name="BackGroundTheme" parent="Theme.Material3.DynamicColors.DayNight">
+        <item name="android:background">@android:color/system_accent1_50</item>
+    </style>
+
 
     <style name="Theme.获取ID3信息" parent="Base.Theme.获取ID3信息" />
 </resources>
