--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,16 +31,16 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="44dp">
+        android:layout_marginEnd="30dp">
 
         <TextView
             android:id="@+id/logPrint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/initTextView"
-            android:textSize="18dp" />
+            android:textSize="18sp" />
     </ScrollView>
 
 </RelativeLayout>
